doc updated for auth
